--- a/stream-common/pom.xml
+++ b/stream-common/pom.xml
@@ -99,6 +99,12 @@
             <artifactId>hbase-client</artifactId>
             <version>2.4.7</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.doris</groupId>
+            <artifactId>flink-doris-connector-1.17</artifactId>
+            <version>1.5.2</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 
