--- a/stream-common/src/main/resources/common-config.properties
+++ b/stream-common/src/main/resources/common-config.properties
@@ -8,6 +8,7 @@ mysql.url=${mysql.url}
 mysql.timezone=${mysql.timezone}
 mysql.database=${mysql.database}
 mysql.databases.conf=${mysql.databases.conf}
+mysql.databases.conf.tb=${mysql.databases.conf.tb}
 mysql.user=${mysql.user}
 mysql.pwd=${mysql.pwd}
 
@@ -17,9 +18,15 @@ ali.key=${ali.key}
 ali.pwd=${ali.pwd}
 
 # kafka cdh
-kafka.bootstrap.servers=cdh01:9092,cdh02:9092,cdh03:9092
+kafka.bootstrap.servers=${Kafka.bootstrap.servers}
 REALTIME.KAFKA.LOG.TOPIC=${REALTIME.KAFKA.LOG.TOPIC}
 kafka.topic.db=${kafka.topic.db}
+
+kafka.err.log=${kafka.err.log}
+kafka.start.log=${kafka.start.log}
+kafka.display.log=${kafka.display.log}
+kafka.action.log=${kafka.action.log}
+kafka.page.topic=${kafka.page.topic}
 
 # Push Message
 push.feishu.url=${push.feishu.url}
