--- a/stream-common/src/main/resources/common-config.properties
+++ b/stream-common/src/main/resources/common-config.properties
@@ -22,6 +22,14 @@ kafka.bootstrap.servers=${Kafka.bootstrap.servers}
 REALTIME.KAFKA.LOG.TOPIC=${REALTIME.KAFKA.LOG.TOPIC}
 kafka.topic.db=${kafka.topic.db}
 
+
+dwd.trade.cart.add=${dwd.trade.cart.add}
+dwd.trade.order.detail=${dwd.trade.order.detail}
+dwd.trade.order.cancel.detail=${dwd.trade.order.cancel.detail}
+
+
+dws.trade.cart.add.uu.window=${dws.trade.cart.add.uu.window}
+
 kafka.err.log=${kafka.err.log}
 kafka.start.log=${kafka.start.log}
 kafka.display.log=${kafka.display.log}
@@ -40,3 +48,14 @@ zookeeper.server.host.list=${zookeeper.server.host.list}
 
 # Hbase
 hbase.namespace=${hbase.namespace}
+
+# Hive
+hive.conf.dir=${hive.conf.dir}
+
+
+#Doris
+fenodes=${fenodes}
+doris.database=${doris.database}
+doris.username=${doris.username}
+doris.password=${doris.password}
+
