--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
         <neo4j.version>4.2.7</neo4j.version>
         <flink.hbase.version>1.10.3</flink.hbase.version>
         <hbase.version>2.4.11</hbase.version>
+        <cdh.dep.version>3.0.0-cdh6.3.2</cdh.dep.version>
     </properties>
 
     <dependencyManagement>
@@ -42,14 +43,14 @@
                 <groupId>org.apache.flink</groupId>
                 <artifactId>flink-hbase_2.11</artifactId>
                 <version>1.10.3</version>
-<!--                <scope>provided</scope>-->
+                <!--                <scope>provided</scope>-->
             </dependency>
 
             <dependency>
                 <groupId>org.apache.flink</groupId>
                 <artifactId>flink-streaming-java</artifactId>
                 <version>${flink.version}</version>
-<!--                <scope>provided</scope>-->
+                <!--                <scope>provided</scope>-->
             </dependency>
 
             <dependency>
@@ -64,7 +65,7 @@
                 <groupId>org.apache.flink</groupId>
                 <artifactId>flink-clients</artifactId>
                 <version>${flink.version}</version>
-<!--                <scope>provided</scope>-->
+                <!--                <scope>provided</scope>-->
             </dependency>
 
             <!--        flink 本地WebUI 依赖-->
@@ -72,7 +73,7 @@
                 <groupId>org.apache.flink</groupId>
                 <artifactId>flink-runtime-web</artifactId>
                 <version>${flink.version}</version>
-<!--                <scope>provided</scope>-->
+                <!--                <scope>provided</scope>-->
             </dependency>
 
             <!--        kafka 依赖-->
@@ -87,7 +88,7 @@
                 <groupId>org.apache.flink</groupId>
                 <artifactId>flink-statebackend-rocksdb</artifactId>
                 <version>${flink.version}</version>
-<!--                <scope>provided</scope>-->
+                <!--                <scope>provided</scope>-->
             </dependency>
 
             <!--        flink table 依赖环境-->
@@ -95,21 +96,21 @@
                 <groupId>org.apache.flink</groupId>
                 <artifactId>flink-table-runtime</artifactId>
                 <version>${flink.version}</version>
-<!--                <scope>provided</scope>-->
+                <!--                <scope>provided</scope>-->
             </dependency>
 
             <dependency>
                 <groupId>org.apache.flink</groupId>
                 <artifactId>flink-table-planner-loader</artifactId>
                 <version>${flink.version}</version>
-<!--                <scope>provided</scope>-->
+                <!--                <scope>provided</scope>-->
             </dependency>
 
             <dependency>
                 <groupId>org.apache.flink</groupId>
                 <artifactId>flink-connector-files</artifactId>
                 <version>${flink.version}</version>
-<!--                <scope>provided</scope>-->
+                <!--                <scope>provided</scope>-->
             </dependency>
 
             <!--        Table API 依赖-->
@@ -117,7 +118,7 @@
                 <groupId>org.apache.flink</groupId>
                 <artifactId>flink-table-api-java</artifactId>
                 <version>${flink.version}</version>
-<!--                <scope>provided</scope>-->
+                <!--                <scope>provided</scope>-->
             </dependency>
 
             <!--        Table API + DataStream 相互集成 -->
@@ -125,7 +126,7 @@
                 <groupId>org.apache.flink</groupId>
                 <artifactId>flink-table-api-java-bridge</artifactId>
                 <version>${flink.version}</version>
-<!--                <scope>provided</scope>-->
+                <!--                <scope>provided</scope>-->
             </dependency>
 
             <!--        Flink 解析JSON-->
@@ -133,7 +134,7 @@
                 <groupId>org.apache.flink</groupId>
                 <artifactId>flink-json</artifactId>
                 <version>${flink.version}</version>
-<!--                <scope>provided</scope>-->
+                <!--                <scope>provided</scope>-->
             </dependency>
 
             <!--        Flink CDC MySQL connector-->
@@ -141,7 +142,7 @@
                 <groupId>com.ververica</groupId>
                 <artifactId>flink-connector-mysql-cdc</artifactId>
                 <version>2.4.0</version>
-<!--                <scope>provided</scope>-->
+                <!--                <scope>provided</scope>-->
             </dependency>
 
 
@@ -171,13 +172,13 @@
                 <groupId>org.apache.hadoop</groupId>
                 <artifactId>hadoop-client</artifactId>
                 <version>${hadoop.version}</version>
-<!--                <scope>provided</scope>-->
+                <!--                <scope>provided</scope>-->
             </dependency>
 
             <dependency>
                 <groupId>org.apache.hadoop</groupId>
                 <artifactId>hadoop-auth</artifactId>
-<!--                <scope>provided</scope>-->
+                <!--                <scope>provided</scope>-->
                 <exclusions>
                     <exclusion>
                         <groupId>org.slf4j</groupId>
@@ -193,14 +194,14 @@
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-api</artifactId>
                 <version>1.7.25</version>
-<!--                <scope>provided</scope>-->
+                <!--                <scope>provided</scope>-->
             </dependency>
 
             <dependency>
                 <groupId>org.apache.logging.log4j</groupId>
                 <artifactId>log4j-to-slf4j</artifactId>
                 <version>2.14.0</version>
-<!--                <scope>provided</scope>-->
+                <!--                <scope>provided</scope>-->
             </dependency>
 
             <dependency>
@@ -253,33 +254,33 @@
             </dependency>
 
             <!-- parquet 文件格式相关依赖 开始 -->
-<!--            <dependency>-->
-<!--                <groupId>org.apache.parquet</groupId>-->
-<!--                <artifactId>parquet-avro</artifactId>-->
-<!--                <version>1.10.0</version>-->
-<!--            </dependency>-->
+            <dependency>
+                <groupId>org.apache.parquet</groupId>
+                <artifactId>parquet-avro</artifactId>
+                <version>1.10.0</version>
+            </dependency>
 
-<!--            <dependency>-->
-<!--                <groupId>org.apache.parquet</groupId>-->
-<!--                <artifactId>parquet-hadoop</artifactId>-->
-<!--                <version>1.10.0</version>-->
-<!--            </dependency>-->
+            <dependency>
+                <groupId>org.apache.parquet</groupId>
+                <artifactId>parquet-hadoop</artifactId>
+                <version>1.10.0</version>
+            </dependency>
 
-<!--            <dependency>-->
-<!--                <groupId>org.apache.flink</groupId>-->
-<!--                <artifactId>flink-parquet</artifactId>-->
-<!--                <version>1.8.0</version>-->
-<!--            </dependency>-->
-<!--            &lt;!&ndash; parquet 文件格式相关依赖 结束 &ndash;&gt;-->
+            <dependency>
+                <groupId>org.apache.flink</groupId>
+                <artifactId>flink-parquet</artifactId>
+                <version>1.8.0</version>
+            </dependency>
+            <!-- parquet 文件格式相关依赖 结束 -->
 
-<!--            &lt;!&ndash; mysql 相关依赖 开始 &ndash;&gt;-->
+            <!-- mysql 相关依赖 开始 -->
 
 
-<!--            <dependency>-->
-<!--                <groupId>commons-dbutils</groupId>-->
-<!--                <artifactId>commons-dbutils</artifactId>-->
-<!--                <version>1.7</version>-->
-<!--            </dependency>-->
+            <dependency>
+                <groupId>commons-dbutils</groupId>
+                <artifactId>commons-dbutils</artifactId>
+                <version>1.7</version>
+            </dependency>
 
             <!-- mysql 相关依赖 结束 -->
         </dependencies>
@@ -323,6 +324,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-resources-plugin</artifactId>
+                <version>3.3.1</version>
                 <executions>
                     <execution>
                         <id>copy-conf</id>
